Add remake alert

--- a/index.html
+++ b/index.html
@@ -631,6 +631,17 @@
                 <button id ="availMatterZero" onclick="zeroMatter()">Set Avail Matter to 0</button><br>
             </div>
 
+            <!-- Original Author Alert -->
+            <div id="authorAlert">
+                <div id="authorPopup">
+                    <h1>This is a remake</h1>
+                    <h3>The original game was made by Frank Lantz.</h3>
+                    <h4>Check it out <a id="originalLink" href="https://www.decisionproblem.com/paperclips/index2.html" target="_blank">here</a>.</h4>
+                    <button id="authorClose" onclick="document.getElementById('authorAlert').style.display = 'none'">OK</button>
+                    <p id="contact">If you want this removed for copyright reasons, please <a id="contactLink" href="mailto:mail.soni801@gmail.com">contact me</a>.</p>
+                </div>
+            </div>
+
             <!-- Scripts -->
             <script type="text/javascript" src="logic/combat.js?v3"></script>
             <script type="text/javascript" src="logic/globals.js?v3"></script>
