--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
         <div id="mobile">
             <div id="mobile-content">
                 <div id="mobile-title">
-                    <img src="mobile-title.png" alt="Mobile Title">
+                    <img src="assets/mobile-title.png" alt="Mobile Title">
                 </div>
                 <div id="mobile-main-text">
                     The web version of this game was<br />
@@ -25,8 +25,8 @@
                     Grab the mobile version below.
                 </div>
                 <div id="mobile-badges">
-                    <a href="https://itunes.apple.com/us/app/universal-paperclips/id1300634274?ls=1&mt=8"><img src="apple_badge.svg" id="apple_badge" alt="Apple Badge"></a>
-                    <a href="https://play.google.com/store/apps/details?id=com.everybodyhouse.paperclipsuniquetest"><img src="google_badge.svg" id="google_badge" alt="Google Badge"></a>
+                    <a href="https://itunes.apple.com/us/app/universal-paperclips/id1300634274?ls=1&mt=8"><img src="assets/apple_badge.svg" id="apple_badge" alt="Apple Badge"></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.everybodyhouse.paperclipsuniquetest"><img src="assets/google_badge.svg" id="google_badge" alt="Google Badge"></a>
                 </div>
             </div> <!-- END mobile-content -->
         </div> <!-- END mobile -->
@@ -927,10 +927,10 @@
 
 
             </div>
-            <script type="text/javascript" src="combat.js?v3"></script>
-            <script type="text/javascript" src="globals.js?v3"></script>
-            <script type="text/javascript" src="projects.js?v3"></script>
-            <script type="text/javascript" src="main.js?v3"></script>
+            <script type="text/javascript" src="scripts/combat.js?v3"></script>
+            <script type="text/javascript" src="scripts/globals.js?v3"></script>
+            <script type="text/javascript" src="scripts/projects.js?v3"></script>
+            <script type="text/javascript" src="scripts/main.js?v3"></script>
 
         </div>
     </body>
